--- a/AzureLanguageService/Audio-Enabled-GenAI-App/.env
+++ b/AzureLanguageService/Audio-Enabled-GenAI-App/.env
@@ -1,2 +1,3 @@
-FOUNDRY_PROJECT_ENDPOINT=""
-MODEL_DEPLOYMENT_NAME=""
+AZURE_OPENAI_ENDPOINT = "YOUR_AZURE_OPENAI_ENDPOINT"
+AZURE_OPENAI_API_KEY = "YOUR_AZURE_OPENAI_API_KEY" 
+MODEL_DEPLOYMENT_NAME = "YOUR_MODEL_DEPLOYMENT_NAME" # model deployment name, e.g., gpt-audio
