added image analysis lab

--- a/AzureAIVision/Image-Analysis/.env
+++ b/AzureAIVision/Image-Analysis/.env
@@ -1,2 +1,2 @@
-CV_ENDPOINT=your_cognitive_services_endpoint
-CV_KEY=your_cognitive_services_key
+CV_ENDPOINT="your_cognitive_services_endpoint"
+CV_KEY="your_cognitive_services_key"
