completed custom image classification lab

--- a/AzureAIVision/Image-Classification/.env
+++ b/AzureAIVision/Image-Classification/.env
@@ -1,2 +1,2 @@
-IMAGE_PREDICTION_URL=""
-IMAGE_PREDICTION_API_KEY=""
+IMAGE_PREDICTION_URL="YOUR_PREDICTION_ENDPOINT_URL"
+IMAGE_PREDICTION_API_KEY="YOUR_PREDICTION_API_KEY"
