added images for inferencing

--- a/AzureAIVision/Object-Detection/.env
+++ b/AzureAIVision/Object-Detection/.env
@@ -2,3 +2,7 @@
 TRAINING_ENDPOINT="YOUR_CUSTOM_VISION_TRAINING_ENDPOINT"
 TRAINING_KEY="YOUR_CUSTOM_VISION_TRAINING_KEY"
 PROJECT_ID="YOUR_CUSTOM_VISION_PROJECT_ID"
+
+# For Inferencing the Custom Vision Object Detection Model
+PREDICTION_ENDPOINT="YOUR_CUSTOM_VISION_PREDICTION_ENDPOINT"
+PREDICTION_KEY="YOUR_CUSTOM_VISION_PREDICTION_KEY"
