--- a/AzureAIVision/Vision-Enabled-GenAI-App/.env
+++ b/AzureAIVision/Vision-Enabled-GenAI-App/.env
@@ -1,3 +1,3 @@
-AZURE_OPENAI_ENDPOINT=""
-AZURE_OPENAI_API_KEY=""
-MODEL_DEPLOYMENT_NAME=""
+AZURE_OPENAI_ENDPOINT="YOUR_AZURE_OPENAI_ENDPOINT"
+AZURE_OPENAI_API_KEY="YOUR_AZURE_OPENAI_API_KEY"
+MODEL_DEPLOYMENT_NAME="YOUR_MODEL_DEPLOYMENT_NAME"
