changed CLU inference code

--- a/AzureLanguageService/CLU/.env
+++ b/AzureLanguageService/CLU/.env
@@ -1,6 +1,5 @@
-PRED_URL="YOUR_PRED_URL"
-LANG_KEY="YOUR_LANG_KEY"
-REQUEST_ID="YOUR_REQUEST_ID"
-WEATHER_API_KEY="YOUR_OPENWEATHER_API_KEY"
-DEPLOYMENT="YOUR_DEPLOYED_MODEL_NAME"
+LANGUAGE_ENDPOINT="YOUR_PREDICTION_ENDPOINT_URL"
+LANGUAGE_KEY="YOUR_PREDICTION_KEY"
 PROJECT_NAME="YOUR_PROJECT_NAME"
+DEPLOYMENT_NAME="YOUR_DEPLOYMENT_NAME"
+WEATHER_API_KEY="YOUR_OPENWEATHER_API_KEY"
